--- a/docker/http/apache+php/conf.d/000-moodle.asir.conf
+++ b/docker/http/apache+php/conf.d/000-moodle.asir.conf
@@ -1,4 +1,4 @@
-<VirtualHost *:${SERVER_PORT}>
+<VirtualHost *:80>
     ServerName ${SERVER_NAME}
     DocumentRoot "/var/www/${SERVER_NAME}"
     <Directory "/var/www/${SERVER_NAME}">
