--- a/env/dev.apachephp.env
+++ b/env/dev.apachephp.env
@@ -12,4 +12,7 @@ MOODLE_VOLUME_PATH=.\moodle_src
 VOLUME_PATH=.\src
 
 NETWORK_NAME=MoodleNet
+NETWORK_SUBNET=192.168.1.0/24
+NETWORK_SUBNET_GATEWAY=192.168.1.1
+IP=192.168.1.3
 LOG_PATH=./logs/apachephp
