--- a/env/dev.mysql.env
+++ b/env/dev.mysql.env
@@ -10,4 +10,6 @@ DB_IMAGE_NAME=mysql_moodle:dev
 DB_LOG_DIR=/var/log/mysql
 DB_DOCKERFILE=./docker/bd/mysql.dev.dockerfile
 DB_NETWORK_NAME=MoodleNet
+DB_NETWORK_SUBNET=192.168.1.0/24
+DB_NETWORK_SUBNET_GATEWAY=192.168.1.1
 DB_IP=192.168.1.4
