Variables para las raices de virtualhost y apache root

--- a/docker/http/apache+php/conf.d/001-moodle.asir.conf
+++ b/docker/http/apache+php/conf.d/001-moodle.asir.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:${MOODLE_SERVER_PORT}>
-    ServerName ${MOODLE_SERVER_NAME}:${MOODLE_SERVER_PORT}
+    ServerName ${MOODLE_SERVER_NAME}
     ServerAdmin you@${MOODLE_SERVER_NAME}
 
     DocumentRoot "${MOODLE_FOLDER_NAME}"
